<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SucursalesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/Azul_Petroleo"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutSu1"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginStart="5.0dp"
                android:layout_marginTop="5.0dp"
                android:layout_marginEnd="5.0dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/map1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/map1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ciudad1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/BOGOTA"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/direccion1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Dir1"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/barrio1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Barrio1"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSu2"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginStart="5.0dp"
                android:layout_marginTop="5.0dp"
                android:layout_marginEnd="5.0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/layoutSu1">


                <ImageView
                    android:id="@+id/map2"
                    android:layout_width="269dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/map2" />

                <LinearLayout
                    android:layout_width="259dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cali"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/CALI"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/direccion2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Dir2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/barrio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Barrio2"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSu3"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginStart="5.0dp"
                android:layout_marginTop="5.0dp"
                android:layout_marginEnd="5.0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/layoutSu2">


                <ImageView
                    android:id="@+id/map3"
                    android:layout_width="269dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/map3" />

                <LinearLayout
                    android:layout_width="259dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/barranquilla"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Barranquilla"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/direccion3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Dir3"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/barrio3"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Barrio3"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSu4"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginStart="5.0dp"
                android:layout_marginTop="5.0dp"
                android:layout_marginEnd="5.0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/layoutSu2">


                <ImageView
                    android:id="@+id/map4"
                    android:layout_width="269dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/map4" />

                <LinearLayout
                    android:layout_width="264dp"
                    android:layout_height="179dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/medellin"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Medellin"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/direccion4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Dir4"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/barrio4"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans_bold_italic"
                        android:text="@string/Barrio4"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnSeleccionar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Seleccionar"
                android:textColor="#0C0C0C"
                app:backgroundTint="@color/Amarillo_Claro" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>